[package]
name = "key-rotation-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
chan = "0.1.23"
futures = "0.3.24"
rand = "0.8.5"
libp2p = { version = "0.49.0", git = "https://github.com/libp2p/rust-libp2p"}
libp2p-noise = { version = "0.39.1", git = "https://github.com/libp2p/rust-libp2p"}
libp2p-tcp = { version = "0.37.0", git = "https://github.com/libp2p/rust-libp2p" }